--- a/诚信理财/pages/home/home.wxss
+++ b/诚信理财/pages/home/home.wxss
@@ -1,18 +1,53 @@
 /* pages/home/home.wxss */
 .header{
   width: 750rpx; 
-  height: 90rpx; 
-  border: 1px solid red;
+  height: 85rpx; 
+  border: 1px solid ;
 }
 .hdCon{
   display:flex;
   justify-content: space-between;
-  align-items: content;
   height: 100%;
+  
+  
+}
+.hdCon kefu{
+  height: 100rpx;
 }
 .hdCon navigator{
   height: 50rpx;
 }
 .hdCon image{
+  height: 110%;
+  
+}
+.kefu{
+  position: relative;
+}
+.kefu .btn{
+  position: absolute;
+  width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  
+}
+.kefu .pic{
+  height: 84%;
+  animation: dh 1s infinite ;
+  
+}
+.banner{
+  width: 100%;
+  height: 295rpx;
+  border: 1px solid;
+}
+.banner swiper{
+  height: 100%;
+  width: 100%;
+}
+.banner image{
+  width: 100%;
+  height: 95%;
 }
