--- a/诚信理财/pages/home/home.wxss
+++ b/诚信理财/pages/home/home.wxss
@@ -2,7 +2,7 @@
 .header{
   width: 750rpx; 
   height: 85rpx; 
-  border: 1px solid ;
+ 
 }
 .hdCon{
   display:flex;
@@ -41,7 +41,7 @@
 .banner{
   width: 100%;
   height: 295rpx;
-  border: 1px solid;
+  
 }
 .banner swiper{
   height: 100%;
@@ -51,3 +51,132 @@
   width: 100%;
   height: 95%;
 }
+
+/* .majorCon{
+  display: flex;
+  padding: 20 rpx 0;
+  flex-wrap: nowrap;
+  width: 1500rpx;
+
+}
+.major .box{
+  text-align: center;
+  padding: 0 20rpx;
+  width: 170 rpx;
+  border: 1px solid red;
+  
+}
+.major .pic{
+  width: 100rpx;
+  height: 100rpx;
+}
+
+.major .txt{
+  font-size:26rpx
+} */
+.major{
+  white-space: nowrap;
+}
+.major .box{
+  text-align: center;
+  padding: 0 20rpx;
+  width: 170 rpx;
+  
+  display: inline-block;
+}
+.major .pic{
+  width: 100rpx;
+  height: 100rpx;
+}
+
+.major .txt{
+  font-size:26rpx;
+  margin-top: 10rpx;
+} 
+
+.pubTitle{
+  display: flex;
+  justify-content: space-between;
+  height: 60rpx;
+  border: 1px solid red;
+  align-items: center;
+  margin-bottom: 35rpx;
+}
+.pubTitle .txt{
+  font-size: 40rpx;
+  height: 100%;
+  position: relative;
+  padding-left: 30rpx;
+
+}
+.pubTitle .txt::after{
+  display: block;
+  width: 8rpx;
+  height: 34rpx;
+  background:#003366;
+  content:"";
+  position: absolute;
+  left: 15rpx;
+  top: 50%;
+  margin-top: -17rpx;
+}
+.pubTitle .more{
+  font-size: 34 rpx;
+  color: #999999  ;
+  margin-right: 20rpx;
+}
+
+
+/* model content */
+.works{
+  background: #f4f4f4;
+  padding: 90rpx 0 70rpx;
+  margin-bottom: 30rpx;  
+}
+.wkMain{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+.wkMain .box{
+  width: 350rpx;
+  height: 214rpx;
+  margin-bottom:10rpx;
+  margin-left: 16rpx;
+  position: relative;
+  
+}
+.wkMain .pic{
+  width: 100%;
+  height: 100%;
+  
+}
+/* .wkMain .ceng{
+  width: 100%;
+  height: 100%;
+  background:rgba(0,0,0,0.05);
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+  text-align: center;
+} */
+
+
+.newWorks{
+
+    padding: 90rpx 0 70rpx;
+    margin-bottom: 30rpx;  
+  }
+
+
+.footer{
+    padding: 50rpx 0;
+    background: #f2f2f2;
+    text-align: center;
+  }
+  .footer .txt{
+    font-size: 25rpx;
+    color: #666;
+
+  }
