--- a/诚信理财/pages/home/home.wxml
+++ b/诚信理财/pages/home/home.wxml
@@ -1,9 +1,8 @@
 <!--pages/home/home.wxml-->
 <view class = "header">
   <view class="container hdCon">
-    <navigator open-type="switchTab" url="/pages/home/home" class="logo">
-      <image mode = "heightFix" src = "/images/logo.png"></image>
-    </navigator>
+    <input placeholder="请输入搜索"></input>
+    <icon type="search"></icon>
 
 
 
