--- a/诚信理财/pages/mystudy/mystudy.wxml
+++ b/诚信理财/pages/mystudy/mystudy.wxml
@@ -1,2 +1,48 @@
 <!--pages/mystudy/mystudy.wxml-->
-<text>pages/mystudy/mystudy.wxml</text>
+<view class='container'>
+  <view class='header'>
+    <open-data type="userAvatarUrl" class='avatar'></open-data>
+    <open-data type="userNickName" class='name'></open-data>
+  </view>
+  <view>
+    <view class='other'>
+      <view class='share other-item'>
+        <button open-type='share' class='btn' hover-class='none'>
+          <text class='iconfont icon-fenxiang1'></text> 学习兴趣
+        </button>
+      </view>
+      <view class='customer other-item'>
+        <button open-type='contact' class='btn' hover-class='none'>
+          <text class='iconfont icon-lianxikefu'></text> 消息中心
+        </button>
+      </view>
+      <view class='about other-item'>
+        <navigator url='../../subPages/about-page/about-page' hover-class='none'>
+          <text class='iconfont icon-guanyuwomen'></text> 联系客服
+        </navigator>
+      </view>
+    </view>
+    
+    <view class='order'>
+      <view class='title-box'>
+        <view class='title'>学习记录</view>
+        <view class='title-line'></view>
+      </view>
+      <view class='order-list'>
+        <navigator class='order-item' url='../../subPages/movie-order/movie-order' hover-class='none'>
+          <image src='/assets/images/order_movie.png'></image>
+          <view>在学习</view>
+        </navigator>
+        <navigator class='order-item' url='../../subPages/snack-order/snack-order' hover-class='none'>
+          <image src='/assets/images/order_store.png'></image>
+          <view>已学习</view>
+        </navigator>
+      </view>
+    </view>
+
+
+
+
+
+  </view>
+</view>
