--- a/诚信理财/pages/mystudy/mystudy.wxss
+++ b/诚信理财/pages/mystudy/mystudy.wxss
@@ -10,13 +10,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('https://s0.meituan.net/bs/file/?f=my-canary:deploy/dpmmweb/client/dpmmweb/component/mycenter/img/bg.png');
+  background-color: #999999;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 300rpx;
   height: 300rpx;
   overflow: hidden;
-  text-align: center;
+  text-align: left;
+  border: solid 1px red;
 }
 
 .header .avatar {
