--- a/诚信理财/pages/mystudy/mystudy.wxss
+++ b/诚信理财/pages/mystudy/mystudy.wxss
@@ -16,8 +16,8 @@
   background-size: 100% 300rpx;
   height: 300rpx;
   overflow: hidden;
-  text-align: left;
-  border: solid 1px red;
+  text-align: center;
+  
 }
 
 .header .avatar {
@@ -84,8 +84,8 @@
 }
 
 .order-item image {
-  width: 84rpx;
-  height: 84rpx;
+  width: 150rpx;
+  height: 150rpx;
   margin-bottom: 6rpx;
 }
 
@@ -103,11 +103,11 @@
   position: relative;
   height: 100rpx;
   line-height: 100rpx;
-  font-size: 30rpx;
   margin-left: 30rpx;
   padding-right: 30rpx;
   color: #333;
   border-bottom: 1px solid #f0f0f0;
+  align-items: center;
 }
 
 .other-item::after {
@@ -120,20 +120,25 @@
   border-left: 1px solid #ccc;
   border-top: 1px solid #ccc;
   transform: translateY(-50%) rotate(135deg);
+ 
+
 }
 /* 覆盖按钮的默认样式 */
 .other .btn{
-   width:100%;
-   border:none;
-   border-radius: 0;
-   padding:0;
-   margin:0;
-   font-size: 1em;
-   position: static;
-   line-height: normal;
-   color: #333;
-   text-align: left;
-   background: #fff;
+  font-size: 30rpx;
+  opacity: 0.8;
+  width:100%;
+  height: 100%;
+  position: relative;
+  border-radius: 0;
+  line-height: 100rpx;
+  padding-left: 3px;
+  color: #333;
+  text-align: left;
+  background: #fff;
+  display:flex;
+
+  align-items: center;
 }
 .other .btn::after{
   content: none;
@@ -141,13 +146,74 @@
 .other .iconfont{
   display: inline-block;
   line-height: 100rpx;
+  
   margin-right: 8rpx;
-  font-size: 32rpx;
   color: #333;
 }
-.customer .iconfont{
-  font-size: 38rpx;
-}
+
 .about .iconfont{
   opacity: 0.8;
+}
+
+
+
+
+
+
+
+
+/* switch-content */
+
+.collect{
+  display: flex;
+  background: #fff;
+  margin-top: 20rpx;
+}
+
+.switch-content {
+  padding-bottom: 30rpx;
+}
+
+.title {
+  padding: 0 30rpx;
+  padding-top: 20rpx;
+  font-size: 28rpx;
+  color: #333;
+}
+
+.most-expected {
+  position: relative;
+  padding: 0 30rpx;
+  padding-bottom: 20rpx;
+  border-bottom: 20rpx solid #f5f5f5;
+}
+
+.most-expected .title {
+  padding-left: 0;
+  margin-bottom: 20rpx;
+}
+
+.expected-item { 
+  display: inline-block;
+  width: 170rpx;
+  overflow: hidden;
+  margin-right: 20rpx;
+}
+
+.poster {
+  position: relative;
+  width: 170rpx;
+  height: 230rpx;
+  margin-bottom: 12rpx;
+}
+
+.name {
+  margin-bottom: 3px;
+  font-size: 24rpx;
+  color: #333;
+}
+
+.data {
+  font-size: 24rpx;
+  color: #999;
 }
