--- a/诚信理财/pages/template/video/video.wxss
+++ b/诚信理财/pages/template/video/video.wxss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   height: 228rpx;
-  padding: 0 30rpx;
+  margin-left: -20rpx;
 }
 .movie-section::after{
   position: absolute;
@@ -33,8 +33,8 @@
 
 
 .movie-img {
-  width: 240rpx;
-  height: 170rpx;
+  width: 300rpx;
+  height: 180rpx;
 }
 
 .movie-name {
