--- a/诚信理财/pages/sub/play/play.wxss
+++ b/诚信理财/pages/sub/play/play.wxss
@@ -30,6 +30,10 @@
   display: block;
 }
 
+.swiper-content{
+  width: 100%;
+  height: 500px;
+}
 
 .swiper-tab{  
   width: 100%;  
@@ -54,7 +58,6 @@ font-size: 29rpx;
 .tabcontent{
   width: 100%;
   height: fit-content;
-  border: red solid 1px;
 }
 .header{
   display: flex;
@@ -65,7 +68,6 @@ font-size: 29rpx;
   height: 80rpx;
   align-items: center;
 
-  border: 1px solid red;
   background:transparent;
 }
 .list{
@@ -73,8 +75,8 @@ font-size: 29rpx;
   position: relative;
   flex-direction: column;
   width: 100%;
-  height: fit-content;
-  border: blue solid 1px;
+  height: 500px;
+  border: red solid 1px;
 
 }
 .list-item{
@@ -83,7 +85,27 @@ font-size: 29rpx;
   font-size: 22rpx;
   width: 100%;
   height: 50rpx;
-  border: black solid 1px;
+}
 
+.major{
+  width: 100%;
+  height: fit-content;
+  margin-top: 20rpx;
+  white-space: nowrap;
+}
+.major .box{
+  text-align: center;
+  padding: 0 20rpx;
+  width: 170 rpx;
+  
+  display: inline-block;
+}
+.major .pic{
+  width: 300rpx;
+  height: 180rpx;
+}
 
+.major .txt{
+  font-size:26rpx;
+  margin-top: 10rpx;
 }
